# Satori

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/tests/: regression.rs  smoke.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: main.rs
data/processed/: cards.json
docs/: 1. 项目计划书.md  2. API 契约.md  3. 开发协作.md  presentation.typ
docs/api-examples/: error-invalid-limit.json  error-invalid-query.json  search-success.json
tests/fixtures/: cards.json  regression.json
