[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/indexer",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/anfsity/Satori"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
