[package]
name = "satori-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
satori-core = { path = "../core" }
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
urlencoding = "2.1.3"
